alignment issue across the application

--- a/app/styles/_admin-dashboard.scss
+++ b/app/styles/_admin-dashboard.scss
@@ -808,7 +808,7 @@ tags-input .autocomplete .suggestion-item.selected, tags-input .autocomplete .su
   color: $lapis-lazuli;
   font-size: $font-size-small;
   font-weight: 300;
-  text-align:center;
+  text-align:left;
 }
 
 .dashboard__manage-view--header .text-centered {
